Changelog for DimensionDoor (v2.1.4-SNAPSHOT)

2012-11-18 15:16:50 +0000    update localisation key and fix #26 (James Richardson)
2012-11-18 15:04:32 +0000    persist keep_spawn_in_memory fixes #25 (James Richardson)
2012-10-25 21:53:35 +0100    preparing to release (James Richardson)
2012-10-25 21:51:58 +0100    life is too short to fix this dependency problem (James Richardson)
2012-10-25 21:50:10 +0100    update changelog (James Richardson)
2012-10-25 21:22:18 +0100    add default description for uploaded files (James Richardson)
2012-10-25 21:10:17 +0100    add bukkitdev uploader (James Richardson)
2012-10-25 20:55:03 +0100    fix case sensitivity with enums (fix #24) (James Richardson)
2012-10-25 20:46:44 +0100    Fix localisation key mix up (fixes #21 and #23) (James Richardson)
2012-10-25 20:31:35 +0100    clear armour when changing worlds (fixes #8 and #20) (James Richardson)
2012-10-25 19:59:38 +0100    use latest version of BukkitUtilities (James Richardson)
2012-08-10 11:31:46 +0100    update readme (James Richardson)

v2.1.2
2012-08-10 11:18:56 +0100    register to refresh statistics when necessary (James Richardson)
2012-08-10 10:56:11 +0100    more useful metrics (James Richardson)
2012-08-10 10:33:29 +0100    add warning when a generator plugin is required but not loaded (James Richardson)
2012-08-10 10:27:38 +0100    Fix ClassCastException (James Richardson)
2012-08-10 09:44:49 +0100    update readme (James Richardson)

v2.1.1
2012-08-08 06:12:33 +0100    added missing key (James Richardson)
2012-08-07 07:51:05 +0100    add missing key (James Richardson)
2012-08-07 07:49:30 +0100    key mismatch (James Richardson)
2012-08-07 07:46:56 +0100    NPE when checking permission (James Richardson)
2012-08-07 03:13:34 +0100    allow players to access main world by default (James Richardson)
2012-08-07 03:10:37 +0100    fix permissions not registering correctly (James Richardson)
2012-08-07 03:07:32 +0100    added additional keys (James Richardson)